Add /work api
